[BUG] Solve horizontal scroll overflow

--- a/client/src/css/Footer.css
+++ b/client/src/css/Footer.css
@@ -1,6 +1,7 @@
 .FooterContainer {
     height: 20vh;
     width: 100%;
+    
     display: flex;
     flex-direction: column;
 }
@@ -8,11 +9,14 @@
 .Link {
     font-size: x-large;
     font-family: 'NanumSquareRoundB';
+    
     width: 70%;
     padding-top: 32px;
     padding-bottom: 32px;
+    
     text-align: right;
     align-self: center;
+
     flex: 1;
     display: flex;
     flex-direction: column;
@@ -27,16 +31,23 @@
 }
 
 .Footer {
-    text-align: left;
+    background-color: #E4E7E8;
+
     font-size: medium;
     font-family: 'NanumSquareRoundR';
-    background-color: #E4E7E8;
+    
+    text-align: left;
     align-self: center;
-    padding-left: 32px;
+    
     width: 100%;
     height: 128px;
+    
     display: flex;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+}
+
+.FooterText {
+    margin-left: 32px;
 }
